Fixed dark mode coloring for some input components and mat card background colors

--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -8,12 +8,6 @@
 //     grid-auto-rows: 150px;
 // }
 
-:host ::ng-deep {
-    .mat-mdc-text-field-wrapper {
-        background-color: white;
-    }
-}
-
 ion-content {
     padding: 32px !important;
 }
