--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -83,15 +83,25 @@ $app-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$app-theme: mat.define-light-theme(
-  (
+$app-theme: mat.define-light-theme((
+  color: (
+    primary: $app-primary,
+    accent: $app-accent,
+    warn: $app-warn,
+  ),
+));
+
+.dark-mode {
+  $app-dark: mat.define-dark-theme((
     color: (
       primary: $app-primary,
       accent: $app-accent,
       warn: $app-warn,
     ),
-  )
-);
+  ));
+  @include mat.all-component-themes($app-dark);
+  @include mat.all-legacy-component-themes($app-dark);
+}
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -220,6 +230,8 @@ $app-theme: mat.define-light-theme(
   --ion-color-primary-light-contrast-rgb: 0, 0, 0;
   --ion-color-primary-light-shade: #c5cfc4;
   --ion-color-primary-light-tint: #e3ede2;
+
+  --ion-card-color: #fff;
 }
 
 // @media (prefers-color-scheme: dark) {
